src/objects/CustomObject20__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>UzCL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount1__c</fullName>
        <label>数量1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount2__c</fullName>
        <label>数量2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount3__c</fullName>
        <label>数量3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountDX__c</fullName>
        <label>费用总计（大写）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BJamountDX__c</fullName>
        <label>备件合同金额（大写）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChineseDescription2__c</fullName>
        <formula>SparePartsProducts2__r.ChineseDescription__c</formula>
        <label>中文描述2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChineseDescription3__c</fullName>
        <formula>SparePartsProducts3__r.ChineseDescription__c</formula>
        <label>中文描述3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChineseDescription4__c</fullName>
        <formula>SparePartsProducts4__r.ChineseDescription__c</formula>
        <label>中文描述4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(HJTotalPrice__c = 0, 0, TransactionAmount__c  /  HJTotalPrice__c)</formula>
        <label>折扣(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FeeTotal__c</fullName>
        <formula>TravelExpense__c  +  ServiceCharge__c  +   TransactionAmount__c</formula>
        <label>费用总计（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否上传附件</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HJTotalPrice__c</fullName>
        <formula>TotalPrice1__c + TotalPrice2__c + TotalPrice3__c + TotalPrice4__c +TotalPrice5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件合计金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartNo1__c</fullName>
        <formula>SparePartsProducts1__r.PartNo__c</formula>
        <label>PartNo1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNo2__c</fullName>
        <formula>SparePartsProducts2__r.PartNo__c</formula>
        <label>PartNo2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartNo3__c</fullName>
        <formula>SparePartsProducts3__r.PartNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartNo3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine1__c</fullName>
        <formula>text ( SparePartsProducts1__r.ProductLine__c )</formula>
        <label>产品线1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine2__c</fullName>
        <formula>TEXT ( SparePartsProducts2__r.ProductLine__c )</formula>
        <label>产品线2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine3__c</fullName>
        <formula>text ( SparePartsProducts3__r.ProductLine__c )</formula>
        <label>产品线3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestFulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>QzEn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReturnRequest__c</fullName>
        <label>回款要求</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOpportunities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>kVtL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceCharge__c</fullName>
        <label>服务费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SparePartsProducts1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件产品1</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipName>bjldR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartsProducts2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件产品2</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>单次报价 (备件产品2)</relationshipLabel>
        <relationshipName>BJ1leF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartsProducts3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件产品3</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>单次报价 (备件产品3)</relationshipLabel>
        <relationshipName>bj1leP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardPrices1__c</fullName>
        <formula>SparePartsProducts1__r.StandardPrice__c</formula>
        <label>备件单价1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StandardPrices2__c</fullName>
        <formula>SparePartsProducts2__r.StandardPrice__c</formula>
        <label>备件单价2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StandardPrices3__c</fullName>
        <formula>SparePartsProducts3__r.StandardPrice__c</formula>
        <label>备件单价3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice1__c</fullName>
        <formula>Amount1__c  *  StandardPrices1__c</formula>
        <label>合计价格1（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice2__c</fullName>
        <formula>Amount2__c  *  StandardPrices2__c</formula>
        <label>合计价格2（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice3__c</fullName>
        <formula>Amount3__c  *  StandardPrices3__c</formula>
        <label>合计价格3（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransactionAmountDX__c</fullName>
        <label>维修收费金额（大写）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionAmount__c</fullName>
        <label>维修收费金额（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TravelExpense__c</fullName>
        <label>差旅费</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>单次报价</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>DCWX-{000000}</displayFormat>
        <label>单次报价编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>单次报价</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>shangchuanfujian</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   Field1__c = false,
    !ISNEW(),
   OR(
    DATEVALUE(CreatedDate) &gt;= DATEVALUE(&apos;2018-06-04&apos;), 
    ISNULL(CreatedDate) 
   ),
     ISPICKVAL(Approval__c, &apos;已审批&apos;) 
)</errorConditionFormula>
        <errorMessage>必须上传附件后才能提交审批</errorMessage>
    </validationRules>
</CustomObject>